Mofifications needed for Scala 2.10 to mvn clean install gapt with no errors